Добавлена реализация репозиториев и автоматическое создание таблиц при запуске программы