@@ -29,6 +29,9 @@ dependencies {
 
     implementation("com.zaxxer:HikariCP:2.3.2")
     implementation("io.github.cdimascio:dotenv-java:3.1.0")
+    implementation("org.postgresql:postgresql:42.6.0")
+
+    implementation("org.mockito:mockito-core:3.6.28")
 }
 
 
@@ -44,3 +47,8 @@ dependencies {
 tasks.test {
     useJUnitPlatform()
 }
+
+tasks.withType<JavaExec> {
+    jvmArgs("--add-opens", "java.base/java.lang=ALL-UNNAMED")
+}
+
